--- a/style.css
+++ b/style.css
@@ -63,6 +63,17 @@ table {
 
 th {
     font-family: 'Lucida Sans', sans-serif;
+    border-bottom: 1px solid rgb(0, 0, 0);
+}
+
+.option {
+    text-align: center;
+    padding: 2px;
+    margin: 5px;
+    border: 1px solid rgb(0, 0, 0);
+    border-radius: 5px;
+    color: black;
+    text-decoration: none;
 }
 
 td {
@@ -70,14 +81,32 @@ td {
 }
 
 .total {
-    border-top: 1px solid rgb(213, 213, 213);
+    border-top: 1px solid rgb(0, 0, 0);
     font-size: 18px;
 }
 
-table td {
-    border-left: 1px solid rgb(213, 213, 213);
+.total:nth-child(2), table td:nth-child(5), table th:nth-child(5) {
+    border-left: 1px solid rgb(0, 0, 0);
+    border-right: 1px solid rgb(0, 0, 0);
 }
 
-table th:last-child {
-    border-left: 1px solid rgb(213, 213, 213);
+tr:nth-child(even) {
+    background-color: rgb(240, 240, 240);
+}
+
+table th:first-child, table td:first-child {
+    border-right: 1px solid rgb(0, 0, 0);
+}
+
+.clear {
+    font-family:Arial, Helvetica, sans-serif ;
+    padding: 2px;
+    border: 1px solid black;
+    border-radius: 5px;
+    color: rgb(182, 0, 0);
+    text-decoration: none;
+}
+
+.clear:hover {
+    border: 2px solid rgb(187, 0, 0);
 }
