--- a/style.css
+++ b/style.css
@@ -50,10 +50,14 @@ input:hover {
 }
 
 ul {
+    display: flex;
+    align-items: center;
     width: auto;
     border: 2px solid black;
+    line-height: 5px;
     border-radius: 5px;
     padding: 0px;
+    margin: 0px;
 }
 
 li {
@@ -61,7 +65,7 @@ li {
     padding: 5px;
 }
 
-li a {
+li a, li p {
     color: black;
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
